# refront

./: README.md
.github/workflows/: desktop-release.yml
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.staging.conf.json
apps/desktop/src-tauri/capabilities/: default.json  desktop.json
apps/desktop/src-tauri/icons/dev/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
