[package]
name = "refront"
version = "0.6.2"
description = "Refront Desktop App"
authors = ["MG Software B.V."]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "refront_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9", features = ["macos-private-api", "tray-icon", "webview-data-url"] }
tauri-plugin-opener = "2.5"
tauri-plugin-deep-link = "2.4"
tauri-plugin-global-shortcut = "2.3"
tauri-plugin-autostart = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.24"
tauri-plugin-updater = "2.9"
tauri-plugin-dialog = "2.4"
tauri-plugin-process = "2.3"
tauri-plugin-notification = "2.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3"
tauri-plugin-updater = "2.9"

